--- a/kinect/00_KinectBasic/kinect.cfg
+++ b/kinect/00_KinectBasic/kinect.cfg
@@ -4,9 +4,7 @@
     <UPDATE />
     <CONFIGPARAMS>
         <PARAM name="inlet" type="INLET" />
-        <PARAM name="outlet" type="OUTLET">
-            
-        </PARAM>
+        <PARAM name="outlet" type="OUTLET" />
         <PARAM name="script" type="SCRIPT">
             <VAL>
                 <D type="TXT"></D>
@@ -51,7 +49,7 @@
         </PARAM>
         <PARAM name="offset_max" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">3000</D>
+                <D type="FUNCTION">1200</D>
             </VAL>
             <VAL>
                 <D type="FUNCTION">2800</D>
@@ -265,13 +263,103 @@
             <VAL>
                 <D type="TXT">default</D>
             </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
         </PARAM>
         <PARAM name="texture2" type="TEXTURE">
             <VAL>
                 <D type="TXT">default</D>
             </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
         </PARAM>
         <PARAM name="texture3" type="TEXTURE">
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
             <VAL>
                 <D type="TXT">default</D>
             </VAL>
@@ -347,6 +435,9 @@
             <P name="offset_right">1</P>
             <P name="offset_bottom">1</P>
             <P name="update_on">1</P>
+            <P name="texture1">1</P>
+            <P name="texture2">1</P>
+            <P name="texture3">1</P>
         </PRE>
         <PRE>
             <P name="outlet">2</P>
@@ -354,26 +445,101 @@
             <P name="offset_max">2</P>
             <P name="offset_left">2</P>
             <P name="offset_right">2</P>
-            <P name="offset_bottom">1</P>
-            <P name="update_on">1</P>
+            <P name="offset_bottom">2</P>
+            <P name="update_on">2</P>
+            <P name="texture1">2</P>
+            <P name="texture2">2</P>
+            <P name="texture3">2</P>
         </PRE>
         <PRE>
             <P name="outlet">3</P>
             <P name="offset_min">3</P>
             <P name="offset_max">3</P>
-            <P name="offset_left">2</P>
-            <P name="offset_right">2</P>
-            <P name="offset_bottom">1</P>
-            <P name="update_on">1</P>
+            <P name="offset_left">3</P>
+            <P name="offset_right">3</P>
+            <P name="offset_bottom">3</P>
+            <P name="update_on">3</P>
+            <P name="texture1">3</P>
+            <P name="texture2">3</P>
+            <P name="texture3">3</P>
         </PRE>
         <PRE>
             <P name="outlet">4</P>
             <P name="offset_min">4</P>
-            <P name="offset_max">3</P>
-            <P name="offset_left">2</P>
-            <P name="offset_right">2</P>
-            <P name="offset_bottom">1</P>
-            <P name="update_on">1</P>
+            <P name="offset_max">4</P>
+            <P name="offset_left">4</P>
+            <P name="offset_right">4</P>
+            <P name="offset_bottom">4</P>
+            <P name="update_on">4</P>
+            <P name="texture1">4</P>
+            <P name="texture2">4</P>
+            <P name="texture3">4</P>
+        </PRE>
+        <PRE>
+            <P name="offset_min">5</P>
+            <P name="offset_max">5</P>
+            <P name="offset_left">5</P>
+            <P name="offset_right">5</P>
+            <P name="offset_bottom">5</P>
+            <P name="texture1">5</P>
+            <P name="texture2">5</P>
+            <P name="texture3">5</P>
+            <P name="update_on">5</P>
+        </PRE>
+        <PRE>
+            <P name="offset_min">6</P>
+            <P name="offset_max">6</P>
+            <P name="offset_left">6</P>
+            <P name="offset_right">6</P>
+            <P name="offset_bottom">6</P>
+            <P name="texture1">6</P>
+            <P name="texture2">6</P>
+            <P name="texture3">6</P>
+            <P name="update_on">6</P>
+        </PRE>
+        <PRE>
+            <P name="offset_min">7</P>
+            <P name="offset_max">7</P>
+            <P name="offset_left">7</P>
+            <P name="offset_right">7</P>
+            <P name="offset_bottom">7</P>
+            <P name="texture1">7</P>
+            <P name="texture2">7</P>
+            <P name="texture3">7</P>
+            <P name="update_on">7</P>
+        </PRE>
+        <PRE>
+            <P name="offset_min">8</P>
+            <P name="offset_max">8</P>
+            <P name="offset_left">8</P>
+            <P name="offset_right">8</P>
+            <P name="offset_bottom">8</P>
+            <P name="texture1">8</P>
+            <P name="texture2">8</P>
+            <P name="texture3">8</P>
+            <P name="update_on">8</P>
+        </PRE>
+        <PRE>
+            <P name="offset_min">9</P>
+            <P name="offset_max">9</P>
+            <P name="offset_left">9</P>
+            <P name="offset_right">9</P>
+            <P name="offset_bottom">9</P>
+            <P name="texture1">9</P>
+            <P name="texture2">9</P>
+            <P name="texture3">9</P>
+            <P name="update_on">9</P>
+        </PRE>
+        <PRE>
+            <P name="offset_min">10</P>
+            <P name="offset_max">10</P>
+            <P name="offset_left">10</P>
+            <P name="offset_right">10</P>
+            <P name="offset_bottom">10</P>
+            <P name="texture1">10</P>
+            <P name="texture2">10</P>
+            <P name="texture3">10</P>
+            <P name="update_on">10</P>
         </PRE>
     </PRECONFIGS>
 </MOCONFIG>
