--- a/kinect/Makefile.am
+++ b/kinect/Makefile.am
@@ -7,19 +7,34 @@ pixmapsdir = ${prefix}/share/pixmaps
 testdir = ${datadir}/test
 testsimpledir = ${testdir}
 
-basicdir = ${datadir}/scripting
+basicdir = ${datadir}/kinect
 
-kinect00dir = ${basicdir}/00_KinectBasic
-dist_kinect00_DATA = 00_KinectBasic/*.*
+kinect03KinectParticlesSounddir = ${basicdir}/03_KinectParticlesSound
+dist_kinect03KinectParticlesSound_DATA = 03_KinectParticlesSound/*.*
 
-kinect01dir = ${basicdir}/01_KinectSkeleton
-dist_kinect01_DATA = 01_KinectSkeleton/*.*
+kinect03KinectParticlesSoundSonidosdir = ${basicdir}/03_KinectParticlesSound/Sonidos
+dist_kinect03KinectParticlesSoundSonidos_DATA = 03_KinectParticlesSound/Sonidos/*.*
 
-kinect02dir = ${basicdir}/02_KinectParticles
-dist_kinect02_DATA = 02_KinectParticles/*.*
 
-kinect03dir = ${basicdir}/03_KinectParticlesSound
-dist_kinect03_DATA = 03_KinectParticlesSound/*.*
+kinect00KinectBasicdir = ${basicdir}/00_KinectBasic
+dist_kinect00KinectBasic_DATA = 00_KinectBasic/*.*
 
-kinect04dir = ${basicdir}/03_KinectParticlesSoundFractal
-dist_kinect04_DATA = 04_KinectParticlesSoundFractal/*.*
+kinect01KinectSkeletondir = ${basicdir}/01_KinectSkeleton
+dist_kinect01KinectSkeleton_DATA = 01_KinectSkeleton/*.*
+
+kinect02KinectParticlesdir = ${basicdir}/02_KinectParticles
+dist_kinect02KinectParticles_DATA = 02_KinectParticles/*.*
+
+kinect04KinectParticlesSoundFractaldir = ${basicdir}/04_KinectParticlesSoundFractal
+dist_kinect04KinectParticlesSoundFractal_DATA = 04_KinectParticlesSoundFractal/*.*
+
+
+
+
+
+
+
+
+
+
+
