--- a/sound/SoundFaust/soundfaust_W.cfg
+++ b/sound/SoundFaust/soundfaust_W.cfg
@@ -54,25 +54,25 @@
                 <D type="TXT">enginemono.wav</D>
             </VAL>
             <VAL>
-                <D type="TXT">DRUM_W.wav</D>
+                <D type="TXT">enginemono.wav</D>
             </VAL>
             <VAL>
-                <D type="TXT">DRUM_W.wav</D>
+                <D type="TXT">enginemono.wav</D>
             </VAL>
         </PARAM>
-        <PARAM name="mode" type="NUM">
+        <PARAM name="mode" type="NUM" options="SINGLE,LONGPLAY,SOUND,FILTER">
             <VAL>
                 <D type="INT">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="loop" type="NUM" property="published">
+        <PARAM name="loop" type="FUNCTION" property="published">
             <VAL>
-                <D type="INT">1</D>
+                <D type="FUNCTION">1</D>
             </VAL>
         </PARAM>
-        <PARAM name="launch" type="NUM" property="published">
+        <PARAM name="launch" type="FUNCTION" property="published">
             <VAL>
-                <D type="INT">1</D>
+                <D type="FUNCTION">1</D>
             </VAL>
         </PARAM>
         <PARAM name="speedofsound" type="FUNCTION" property="published">
@@ -171,6 +171,81 @@
         <PARAM name="seekposition" type="FUNCTION">
             <VAL>
                 <D type="FUNCTION">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="show_audio_data" type="NUM">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="display_x" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">-0.5</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="display_y" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">-0.35</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="display_width" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">1.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="display_height" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0.05</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="volume_in" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">1.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="balance_mono_stereo" type="TRANSLATEX">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="scalex_vbars" type="SCALEX">
+            <VAL>
+                <D type="FUNCTION">1.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="scaley_vbars" type="SCALEY">
+            <VAL>
+                <D type="FUNCTION">1.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="scalez_vbars" type="SCALEZ">
+            <VAL>
+                <D type="FUNCTION">1.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="scalex" type="SCALEX">
+            <VAL>
+                <D type="FUNCTION">1.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="scaley" type="SCALEY">
+            <VAL>
+                <D type="FUNCTION">1.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="scalez" type="SCALEZ">
+            <VAL>
+                <D type="FUNCTION">1.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="Level Averaging Time" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="Level dB Offset" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
