--- a/taller/VisualArt/MIRRORG.cfg
+++ b/taller/VisualArt/MIRRORG.cfg
@@ -10,20 +10,20 @@
                 <D type="TXT"></D>
             </VAL>
         </PARAM>
-        <PARAM name="alpha" type="ALPHA">
+        <PARAM name="alpha" type="ALPHA" property="published">
             <VAL>
                 <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="color" type="COLOR">
+        <PARAM name="color" type="COLOR" property="published">
             <VAL>
-                <D type="FUNCTION" code="RED">1.0</D>
-                <D type="FUNCTION" code="GREEN">1.0</D>
-                <D type="FUNCTION" code="BLUE">1.0</D>
+                <D type="FUNCTION" code="RED">0.866667</D>
+                <D type="FUNCTION" code="GREEN">0.541176</D>
+                <D type="FUNCTION" code="BLUE">0.858824</D>
                 <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="syncro" type="SYNC">
+        <PARAM name="syncro" type="SYNC" property="published">
             <VAL>
                 <D type="FUNCTION">1.0</D>
             </VAL>
@@ -33,12 +33,12 @@
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="blending" type="BLENDING">
+        <PARAM name="blending" type="BLENDING" property="published">
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="aberration" type="FUNCTION">
+        <PARAM name="aberration" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">1.0</D>
             </VAL>
@@ -48,12 +48,12 @@
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="generalx" type="FUNCTION">
+        <PARAM name="generalx" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="generaly" type="FUNCTION">
+        <PARAM name="generaly" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">0.0</D>
             </VAL>
@@ -74,5 +74,21 @@
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
-    <PRECONFIGS />
+    <PRECONFIGS>
+        <PRE>
+            <P name="script">0</P>
+            <P name="alpha">0</P>
+            <P name="color">0</P>
+            <P name="syncro">0</P>
+            <P name="phase">0</P>
+            <P name="blending">0</P>
+            <P name="aberration">0</P>
+            <P name="polygonmode">0</P>
+            <P name="generalx">0</P>
+            <P name="generaly">0</P>
+            <P name="dots">0</P>
+            <P name="lines">0</P>
+            <P name="guides">0</P>
+        </PRE>
+    </PRECONFIGS>
 </MOCONFIG>
