--- a/taller/VisualArt/TUNEL.cfg
+++ b/taller/VisualArt/TUNEL.cfg
@@ -43,12 +43,12 @@
                 <D type="TXT"></D>
             </VAL>
         </PARAM>
-        <PARAM name="alpha" type="ALPHA">
+        <PARAM name="alpha" type="ALPHA" property="published">
             <VAL>
                 <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="color" type="COLOR">
+        <PARAM name="color" type="COLOR" property="published">
             <VAL>
                 <D type="FUNCTION" code="RED">0.5 + 0.5*cos(4*t+pi/2)</D>
                 <D type="FUNCTION" code="GREEN">0.5 + 0.5*sin(4*t+pi/3)</D>
@@ -56,19 +56,19 @@
                 <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="syncro" type="SYNC">
+        <PARAM name="syncro" type="SYNC" property="published">
             <VAL>
-                <D type="FUNCTION">0.05</D>
+                <D type="FUNCTION">0.05+0.0000*BEATVAL</D>
             </VAL>
         </PARAM>
-        <PARAM name="phase" type="PHASE">
+        <PARAM name="phase" type="PHASE" property="published">
             <VAL>
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="texture" type="TEXTURE">
+        <PARAM name="texture" type="TEXTURE" property="published">
             <VAL>
-                <D type="TXT">lineas_horizontales.png</D>
+                <D type="TXT">images.jpg</D>
             </VAL>
             <VAL>
                 <D type="TXT">effects_texture</D>
@@ -78,6 +78,27 @@
             </VAL>
             <VAL>
                 <D type="TXT">mand-01.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">/mand-01.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">mand-01.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">/mand-01.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">mand-01.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">/mand-01.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">mand-01.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">/mand-01.png</D>
             </VAL>
         </PARAM>
         <PARAM name="translatex" type="TRANSLATEX">
@@ -95,42 +116,42 @@
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="rotate" type="ROTATEZ">
+        <PARAM name="rotate" type="ROTATEZ" property="published">
             <VAL>
-                <D type="FUNCTION">0.0</D>
+                <D type="FUNCTION">0.0+0.001*BEATVAL</D>
             </VAL>
         </PARAM>
-        <PARAM name="target_translatex" type="TRANSLATEX">
+        <PARAM name="target_translatex" type="TRANSLATEX" property="published">
             <VAL>
                 <D type="FUNCTION">2*cos(time)</D>
             </VAL>
         </PARAM>
-        <PARAM name="target_translatey" type="TRANSLATEY">
+        <PARAM name="target_translatey" type="TRANSLATEY" property="published">
             <VAL>
                 <D type="FUNCTION">2*sin(time)</D>
             </VAL>
         </PARAM>
-        <PARAM name="target_translatez" type="TRANSLATEZ">
+        <PARAM name="target_translatez" type="TRANSLATEZ" property="published">
             <VAL>
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="target_rotate" type="ROTATEZ">
+        <PARAM name="target_rotate" type="ROTATEZ" property="published">
             <VAL>
                 <D type="FUNCTION">10*time*cos(time*1.5)</D>
             </VAL>
         </PARAM>
-        <PARAM name="sides" type="NUM">
+        <PARAM name="sides" type="NUM" property="published">
             <VAL>
-                <D type="INT">6</D>
+                <D type="INT">64</D>
             </VAL>
         </PARAM>
-        <PARAM name="segments" type="NUM">
+        <PARAM name="segments" type="NUM" property="published">
             <VAL>
-                <D type="INT">20</D>
+                <D type="INT">80</D>
             </VAL>
         </PARAM>
-        <PARAM name="wireframe" type="NUM">
+        <PARAM name="wireframe" type="NUM" property="published">
             <VAL>
                 <D type="INT">0</D>
             </VAL>
@@ -140,11 +161,56 @@
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="blending" type="BLENDING">
+        <PARAM name="blending" type="BLENDING" property="published">
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
-    <PRECONFIGS />
+    <PRECONFIGS>
+        <PRE>
+            <P name="inlet">0</P>
+            <P name="texture">0</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">1</P>
+            <P name="texture">1</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">2</P>
+            <P name="texture">2</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">3</P>
+            <P name="texture">3</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">4</P>
+            <P name="texture">4</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">5</P>
+            <P name="texture">5</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">6</P>
+            <P name="texture">6</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">7</P>
+            <P name="texture">7</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">7</P>
+            <P name="texture">8</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">7</P>
+            <P name="texture">9</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">7</P>
+            <P name="texture">10</P>
+        </PRE>
+    </PRECONFIGS>
 </MOCONFIG>
