--- a/taller/VisualArt/parti_stars_2.cfg
+++ b/taller/VisualArt/parti_stars_2.cfg
@@ -149,6 +149,12 @@
             <VAL>
                 <D type="TXT">lineas_horizontales.png</D>
             </VAL>
+            <VAL>
+                <D type="TXT">/lineas_horizontales.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">lineas_horizontales.png</D>
+            </VAL>
         </PARAM>
         <PARAM name="folders" type="TEXTUREFOLDER">
             <VAL>
@@ -607,5 +613,204 @@
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
-    <PRECONFIGS />
+    <PRECONFIGS>
+        <PRE>
+            <P name="inlet">0</P>
+            <P name="alpha">0</P>
+            <P name="color">0</P>
+            <P name="particlecolor">0</P>
+            <P name="texture">0</P>
+            <P name="blending">0</P>
+            <P name="gravity">0</P>
+            <P name="maxage">0</P>
+            <P name="emitionperiod">0</P>
+            <P name="creationmethod">0</P>
+            <P name="orientationmode">0</P>
+            <P name="randommotion">0</P>
+            <P name="scaley_particle">0</P>
+            <P name="rotatex">0</P>
+            <P name="rotatez">0</P>
+            <P name="eyez">0</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">1</P>
+            <P name="alpha">1</P>
+            <P name="color">1</P>
+            <P name="particlecolor">1</P>
+            <P name="texture">1</P>
+            <P name="blending">1</P>
+            <P name="gravity">1</P>
+            <P name="maxage">1</P>
+            <P name="emitionperiod">1</P>
+            <P name="creationmethod">1</P>
+            <P name="orientationmode">1</P>
+            <P name="randommotion">1</P>
+            <P name="scaley_particle">1</P>
+            <P name="rotatex">1</P>
+            <P name="rotatez">1</P>
+            <P name="eyez">1</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">2</P>
+            <P name="alpha">2</P>
+            <P name="color">2</P>
+            <P name="particlecolor">2</P>
+            <P name="texture">2</P>
+            <P name="blending">2</P>
+            <P name="gravity">1</P>
+            <P name="maxage">2</P>
+            <P name="emitionperiod">1</P>
+            <P name="creationmethod">2</P>
+            <P name="orientationmode">1</P>
+            <P name="randommotion">1</P>
+            <P name="scaley_particle">2</P>
+            <P name="rotatex">1</P>
+            <P name="rotatez">2</P>
+            <P name="eyez">1</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">3</P>
+            <P name="alpha">2</P>
+            <P name="color">2</P>
+            <P name="particlecolor">2</P>
+            <P name="texture">3</P>
+            <P name="blending">2</P>
+            <P name="gravity">1</P>
+            <P name="maxage">3</P>
+            <P name="emitionperiod">1</P>
+            <P name="creationmethod">2</P>
+            <P name="orientationmode">1</P>
+            <P name="randommotion">1</P>
+            <P name="scaley_particle">2</P>
+            <P name="rotatex">1</P>
+            <P name="rotatez">2</P>
+            <P name="eyez">1</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">4</P>
+            <P name="alpha">2</P>
+            <P name="color">2</P>
+            <P name="particlecolor">2</P>
+            <P name="texture">4</P>
+            <P name="blending">2</P>
+            <P name="gravity">1</P>
+            <P name="maxage">3</P>
+            <P name="emitionperiod">1</P>
+            <P name="creationmethod">2</P>
+            <P name="orientationmode">1</P>
+            <P name="randommotion">1</P>
+            <P name="scaley_particle">2</P>
+            <P name="rotatex">1</P>
+            <P name="rotatez">2</P>
+            <P name="eyez">1</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">5</P>
+            <P name="alpha">2</P>
+            <P name="color">2</P>
+            <P name="particlecolor">2</P>
+            <P name="texture">5</P>
+            <P name="blending">2</P>
+            <P name="gravity">1</P>
+            <P name="maxage">3</P>
+            <P name="emitionperiod">1</P>
+            <P name="creationmethod">2</P>
+            <P name="orientationmode">1</P>
+            <P name="randommotion">1</P>
+            <P name="scaley_particle">2</P>
+            <P name="rotatex">1</P>
+            <P name="rotatez">2</P>
+            <P name="eyez">1</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">6</P>
+            <P name="alpha">2</P>
+            <P name="color">2</P>
+            <P name="particlecolor">2</P>
+            <P name="texture">6</P>
+            <P name="blending">2</P>
+            <P name="gravity">1</P>
+            <P name="maxage">3</P>
+            <P name="emitionperiod">1</P>
+            <P name="creationmethod">2</P>
+            <P name="orientationmode">1</P>
+            <P name="randommotion">1</P>
+            <P name="scaley_particle">2</P>
+            <P name="rotatex">1</P>
+            <P name="rotatez">2</P>
+            <P name="eyez">1</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">7</P>
+            <P name="alpha">2</P>
+            <P name="color">2</P>
+            <P name="particlecolor">2</P>
+            <P name="texture">7</P>
+            <P name="blending">2</P>
+            <P name="gravity">1</P>
+            <P name="maxage">3</P>
+            <P name="emitionperiod">1</P>
+            <P name="creationmethod">2</P>
+            <P name="orientationmode">1</P>
+            <P name="randommotion">1</P>
+            <P name="scaley_particle">2</P>
+            <P name="rotatex">1</P>
+            <P name="rotatez">2</P>
+            <P name="eyez">1</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">7</P>
+            <P name="alpha">2</P>
+            <P name="color">2</P>
+            <P name="particlecolor">2</P>
+            <P name="texture">8</P>
+            <P name="blending">2</P>
+            <P name="gravity">1</P>
+            <P name="maxage">3</P>
+            <P name="emitionperiod">1</P>
+            <P name="creationmethod">2</P>
+            <P name="orientationmode">1</P>
+            <P name="randommotion">1</P>
+            <P name="scaley_particle">2</P>
+            <P name="rotatex">1</P>
+            <P name="rotatez">2</P>
+            <P name="eyez">1</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">7</P>
+            <P name="alpha">2</P>
+            <P name="color">2</P>
+            <P name="particlecolor">2</P>
+            <P name="texture">9</P>
+            <P name="blending">2</P>
+            <P name="gravity">1</P>
+            <P name="maxage">3</P>
+            <P name="emitionperiod">1</P>
+            <P name="creationmethod">2</P>
+            <P name="orientationmode">1</P>
+            <P name="randommotion">1</P>
+            <P name="scaley_particle">2</P>
+            <P name="rotatex">1</P>
+            <P name="rotatez">2</P>
+            <P name="eyez">1</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">7</P>
+            <P name="alpha">2</P>
+            <P name="color">2</P>
+            <P name="particlecolor">2</P>
+            <P name="texture">10</P>
+            <P name="blending">2</P>
+            <P name="gravity">1</P>
+            <P name="maxage">3</P>
+            <P name="emitionperiod">1</P>
+            <P name="creationmethod">2</P>
+            <P name="orientationmode">1</P>
+            <P name="randommotion">1</P>
+            <P name="scaley_particle">2</P>
+            <P name="rotatex">1</P>
+            <P name="rotatez">2</P>
+            <P name="eyez">1</P>
+        </PRE>
+    </PRECONFIGS>
 </MOCONFIG>
