--- a/taller/VisualArt/parti_stars_3.cfg
+++ b/taller/VisualArt/parti_stars_3.cfg
@@ -60,7 +60,7 @@
                 <D type="FUNCTION">0.15</D>
             </VAL>
         </PARAM>
-        <PARAM name="color" type="COLOR">
+        <PARAM name="color" type="COLOR" property="published">
             <VAL>
                 <D type="FUNCTION" code="RED">1.000000</D>
                 <D type="FUNCTION" code="GREEN">0.000000</D>
@@ -409,7 +409,7 @@
         </PARAM>
         <PARAM name="rotatex_particle" type="ROTATEX" property="published">
             <VAL>
-                <D type="FUNCTION">0</D>
+                <D type="FUNCTION">10+1*BEATLOWVAL</D>
             </VAL>
             <VAL>
                 <D type="FUNCTION">-time*10</D>
@@ -450,7 +450,7 @@
         </PARAM>
         <PARAM name="scaley_particle" type="SCALEY">
             <VAL>
-                <D type="FUNCTION">0.02+1+0.005*BEATLOWVAL</D>
+                <D type="FUNCTION">0.0+0.05*BEATLOWVAL</D>
             </VAL>
             <VAL>
                 <D type="FUNCTION">1</D>
