--- a/taller/VisualArt/soundoscin.cfg
+++ b/taller/VisualArt/soundoscin.cfg
@@ -26,6 +26,8 @@
                 <D type="TXT">BEATFREQ</D>
                 <D type="TXT">parti_stars_3</D>
                 <D type="TXT">BEATFREQ</D>
+                <D type="TXT">TUNEL</D>
+                <D type="TXT">BEATFREQ</D>
             </VAL>
             <VAL>
                 <D type="TXT">BEATVAL</D>
@@ -40,6 +42,8 @@
                 <D type="TXT">BEATVAL</D>
                 <D type="TXT">parti_stars_3</D>
                 <D type="TXT">BEATVAL</D>
+                <D type="TXT">TUNEL</D>
+                <D type="TXT">BEATVAL</D>
             </VAL>
             <VAL>
                 <D type="TXT">BEATHIGHFREQ</D>
@@ -54,6 +58,8 @@
                 <D type="TXT">BEATHIGHFREQ</D>
                 <D type="TXT">parti_stars_3</D>
                 <D type="TXT">BEATHIGHFREQ</D>
+                <D type="TXT">TUNEL</D>
+                <D type="TXT">BEATHIGHFREQ</D>
             </VAL>
             <VAL>
                 <D type="TXT">BEATHIGHVAL</D>
@@ -68,6 +74,8 @@
                 <D type="TXT">BEATHIGHVAL</D>
                 <D type="TXT">parti_stars_3</D>
                 <D type="TXT">BEATHIGHVAL</D>
+                <D type="TXT">TUNEL</D>
+                <D type="TXT">BEATHIGHVAL</D>
             </VAL>
             <VAL>
                 <D type="TXT">BEATMEDIUMFREQ</D>
@@ -82,6 +90,8 @@
                 <D type="TXT">BEATMEDIUMFREQ</D>
                 <D type="TXT">parti_stars_3</D>
                 <D type="TXT">BEATMEDIUMFREQ</D>
+                <D type="TXT">TUNEL</D>
+                <D type="TXT">BEATMEDIUMFREQ</D>
             </VAL>
             <VAL>
                 <D type="TXT">BEATMEDIUMVAL</D>
@@ -95,6 +105,8 @@
                 <D type="TXT">parti_stars_2</D>
                 <D type="TXT">BEATMEDIUMVAL</D>
                 <D type="TXT">parti_stars_3</D>
+                <D type="TXT">BEATMEDIUMVAL</D>
+                <D type="TXT">TUNEL</D>
                 <D type="TXT">BEATMEDIUMVAL</D>
             </VAL>
             <VAL>
@@ -109,6 +121,8 @@
                 <D type="TXT">parti_stars_2</D>
                 <D type="TXT">BEATLOWFREQ</D>
                 <D type="TXT">parti_stars_3</D>
+                <D type="TXT">BEATLOWFREQ</D>
+                <D type="TXT">TUNEL</D>
                 <D type="TXT">BEATLOWFREQ</D>
             </VAL>
             <VAL>
@@ -123,6 +137,8 @@
                 <D type="TXT">parti_stars_2</D>
                 <D type="TXT">BEATLOWVAL</D>
                 <D type="TXT">parti_stars_3</D>
+                <D type="TXT">BEATLOWVAL</D>
+                <D type="TXT">TUNEL</D>
                 <D type="TXT">BEATLOWVAL</D>
             </VAL>
         </PARAM>
