--- a/kinect/00_KinectBasic/user.cfg
+++ b/kinect/00_KinectBasic/user.cfg
@@ -93,7 +93,7 @@
                 <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="color" type="COLOR">
+        <PARAM name="color" type="COLOR" property="published">
             <VAL>
                 <D type="FUNCTION" code="RED">0.964706</D>
                 <D type="FUNCTION" code="GREEN">0.964706</D>
@@ -101,9 +101,9 @@
                 <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION" code="RED">0.5 + 0.5*cos(4*t+pi/2)</D>
-                <D type="FUNCTION" code="GREEN">0.5 + 0.5*sin(4*t+pi/3)</D>
-                <D type="FUNCTION" code="BLUE">0.5 + 0.5*sin(4*t+3*pi)*cos(t)</D>
+                <D type="FUNCTION" code="RED">1.0</D>
+                <D type="FUNCTION" code="GREEN">1.0</D>
+                <D type="FUNCTION" code="BLUE">1.0</D>
                 <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
             <VAL>
@@ -133,6 +133,30 @@
             <VAL>
                 <D type="TXT">KINECTUSER</D>
             </VAL>
+            <VAL>
+                <D type="TXT">KINECTUSER</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">KINECTUSER</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">KINECTUSER</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">KINECTUSER</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">KINECTUSER</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">KINECTUSER</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">KINECTUSER</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">KINECTUSER</D>
+            </VAL>
         </PARAM>
         <PARAM name="blending" type="BLENDING" property="published">
             <VAL>
@@ -157,7 +181,7 @@
                 <D type="FUNCTION">0</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">-0.25</D>
+                <D type="FUNCTION">0.0</D>
             </VAL>
             <VAL>
                 <D type="FUNCTION">-0</D>
@@ -180,7 +204,7 @@
                 <D type="FUNCTION">0.0</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">-0.1</D>
+                <D type="FUNCTION">0.0</D>
             </VAL>
             <VAL>
                 <D type="FUNCTION">0</D>
@@ -203,7 +227,7 @@
                 <D type="FUNCTION">0.0</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">-45</D>
+                <D type="FUNCTION">0</D>
             </VAL>
             <VAL>
                 <D type="FUNCTION">0</D>
