Upgraded for monterrey osx 12.6.3

--- a/basic/06_Video/erase.cfg
+++ b/basic/06_Video/erase.cfg
@@ -15,16 +15,16 @@
                 <D type="TXT"></D>
             </VAL>
         </PARAM>
-        <PARAM name="alpha" type="ALPHA">
+        <PARAM name="alpha" type="ALPHA" property="published">
             <VAL>
                 <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="color" type="COLOR">
+        <PARAM name="color" type="COLOR" property="published">
             <VAL>
-                <D type="FUNCTION" code="RED">0.0</D>
-                <D type="FUNCTION" code="GREEN">0.0</D>
-                <D type="FUNCTION" code="BLUE">0.0</D>
+                <D type="FUNCTION" code="RED">0.992157</D>
+                <D type="FUNCTION" code="GREEN">0.145098</D>
+                <D type="FUNCTION" code="BLUE">0.152941</D>
                 <D type="FUNCTION" code="ALPHA">0.0</D>
             </VAL>
         </PARAM>
@@ -39,5 +39,13 @@
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
-    <PRECONFIGS />
+    <PRECONFIGS>
+        <PRE>
+            <P name="script">0</P>
+            <P name="alpha">0</P>
+            <P name="color">0</P>
+            <P name="syncro">0</P>
+            <P name="phase">0</P>
+        </PRE>
+    </PRECONFIGS>
 </MOCONFIG>
