--- a/basic/06_Video/video.cfg
+++ b/basic/06_Video/video.cfg
@@ -56,7 +56,7 @@
         </PARAM>
         <PARAM name="movies" type="TEXTURE" property="published">
             <VAL>
-                <D type="TXT">video.mp4</D>
+                <D type="TXT">test.avi</D>
             </VAL>
             <VAL>
                 <D type="TXT">video.mp4</D>
@@ -72,7 +72,7 @@
         </PARAM>
         <PARAM name="position" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">0</D>
+                <D type="FUNCTION" min="0.000000" max="53.000000">0</D>
             </VAL>
         </PARAM>
         <PARAM name="speed" type="FUNCTION" property="published">
@@ -197,7 +197,7 @@
                 <D type="FUNCTION">1.0</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">10</D>
+                <D type="FUNCTION">4.53</D>
             </VAL>
         </PARAM>
         <PARAM name="alt_text_y" type="FUNCTION" property="published">
@@ -208,7 +208,7 @@
                 <D type="FUNCTION">1.0*0.5*cos(times*0.01)</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">10</D>
+                <D type="FUNCTION">4.2</D>
             </VAL>
         </PARAM>
         <PARAM name="pos_cuad_x" type="FUNCTION" property="published">
